<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_item_restaurant"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="@string/restaurants"/>

    <item android:id="@+id/menu_item_gas_station"
        android:icon="@drawable/ic_baseline_local_gas_station_24"
        android:title="@string/gas_stations"/>

    <item android:id="@+id/menu_item_groceries"
        android:icon="@drawable/ic_baseline_local_grocery_store_24"
        android:title="@string/groceries"/>

    <item android:id="@+id/menu_item_hotel"
        android:icon="@drawable/ic_baseline_hotel_24"
        android:title="@string/hotels"/>

    <item android:id="@+id/menu_item_pharmacy"
        android:icon="@drawable/ic_baseline_local_pharmacy_24"
        android:title="@string/pharmacy"/>

    <item android:id="@+id/menu_item_all"
        android:icon="@drawable/ic_baseline_all_inclusive_24"
        android:title="@string/all"/>


</menu>